--- a/index.html
+++ b/index.html
@@ -10,9 +10,18 @@
 </head>
 <body>
     <header class="navigacia"> 
-        <i class="fa-solid fa-bicycle fa-2x" style="color: #22623e;"></i>
+<!--       
+         <i class="fa-solid fa-bicycle fa-2x" style="color: #22623e;"></i> -->
         <p> InsightTbilisi </p>
-            <nav>
+        <div id="slider">
+  <figure>
+    <img src="images/tbilisi-city-guide-roofs.avif" alt="Slide 1">
+    <img src="images/tbs.webp" alt="Slide 2">
+    <img src="images/Tbilisi-148-X2.jpg" alt="Slide 3">
+    <!-- add more images as needed -->
+  </figure>
+</div>
+             <nav>
 <ul>
   <li><a class="active" href="index.html">HOME</a></li>
   <li><a href="pages/news.html">NEWS</a></li>
